# aoc

./: .gitignore  CMakeLists.txt  Dockerfile  aoc  aoc.gpr  aoc.nimble  aoc.py  aoc.ts  build.gradle.kts  build.sh  build.zig  runners.json  runners.py
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
src/main/ada/: CMakeLists.txt  aoc-coordinates.adb  aoc-coordinates.ads  aoc.adb  aoc.ads  aoc.gpr  main.adb  run.adb  run.ads
src/main/ada/2019/: aoc-aoc_2019-day01.adb  aoc-aoc_2019-day01.ads  aoc-aoc_2019-day02.adb  aoc-aoc_2019-day02.ads  aoc-aoc_2019-day03.adb  aoc-aoc_2019-day03.ads  aoc-aoc_2019-day05.adb  aoc-aoc_2019-day05.ads  aoc-aoc_2019-day06.adb  aoc-aoc_2019-day06.ads  aoc-aoc_2019-day07.adb  aoc-aoc_2019-day07.ads  aoc-aoc_2019-day08.adb  aoc-aoc_2019-day08.ads  aoc-aoc_2019.adb  aoc-aoc_2019.ads  day01.adb  day02.adb  day03.adb  day04.adb  day05.adb  day06.adb  day07.adb  day08.adb  day09.adb  intcode.adb  intcode.ads
src/main/ada/2022/: day01.adb  day02.adb  day03.adb  day04.adb  day05.adb  day06.adb  day07.adb  day08.adb  day09.adb  day10.adb  day11.adb  day12.adb  (+4 more)
src/main/cxx/: CMakeLists.txt  aoc.hpp  runner.cpp
src/main/glm/: CMakeLists.txt  gleam.toml  manifest.toml
src/main/go/: CMakeLists.txt  runner.go
src/main/misc/: 2015-11.txt  2017-23.md  2023-06.md
src/main/nim/: CMakeLists.txt  aoc.nim  aoc.nimble
src/main/zig/: CMakeLists.txt  ada_bridge.zig  aoc.zig  build.zig  kotlin_bridge.zig  nim_bridge.zig  runner.zig
src/test/ada/: .gitignore
src/test/zig/: entry.zig  index.zig  test2015.zig  test_intcode.zig
(+290 files in other folders)
