cmake_minimum_required(VERSION 3.18)
project(aoc)

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/main/ada")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/main/cxx")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/main/glm")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/main/nim")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/main/zig")
